--- a/CubeMX/CubeMX.ioc
+++ b/CubeMX/CubeMX.ioc
@@ -1,7 +1,8 @@
 #MicroXplorer Configuration settings - do not modify
-CAN.CalculateTimeBit=6000
-CAN.CalculateTimeQuantum=2000.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit
+CAN.CalculateTimeBit=750
+CAN.CalculateTimeQuantum=250.0
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,Prescaler
+CAN.Prescaler=2
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
@@ -70,7 +71,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN_Init-CAN-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
